--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@umijs/test": "^3.0.5",
     "dumi": "^1.1.0",
     "antd": "4.20.2",
+    "babel-plugin-import": "^1.12.2",
     "lerna": "4.x",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
