--- a/packages/x-components/package.json
+++ b/packages/x-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bici/x-components",
+  "name": "@bicitech/x-components",
   "version": "1.0.0",
   "description": "基于antd封装的增强组件以及其他的一些公共组件，纯UI组件",
   "keywords": [
@@ -26,6 +26,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@bici/utils": "1.0.0"
+    "@bicitech/utils": "1.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bici-fed/bici-wui"
   }
 }
