--- a/packages/antx/package.json
+++ b/packages/antx/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@bicitech/x-components",
+  "name": "@bici-wui/antx",
   "version": "1.0.0",
   "description": "基于antd封装的增强组件以及其他的一些公共组件，纯UI组件",
   "keywords": [
     "antd"
   ],
-  "author": "jufeng <jufeng@bicitech.cn>",
+  "author": "jufeng <jufeng@bici-wui.cn>",
   "homepage": "",
   "license": "MIT",
-  "main": "lib/x-components.js",
+  "main": "lib/antx.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "module": "es/index.js",
-    "typings": "es/index.d.ts",
+  "typings": "es/index.d.ts",
   "files": [
     "lib",
     "es"
@@ -26,10 +26,15 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@bicitech/utils": "1.0.0"
+    "@bici-wui/utils": "1.0.0",
+    "lodash": "^4.17.21",
+    "react-draggable": "^4.4.5"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/bici-fed/bici-wui"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.182"
   }
 }
