--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@bicitech/utils",
+  "name": "@bici-wui/utils",
   "version": "1.0.0",
   "description": "> TODO: description",
-  "author": "jufeng <jufeng@bicitech.cn>",
+  "author": "jufeng <jufeng@bici-wui.cn>",
   "homepage": "",
   "license": "ISC",
   "main": "lib/utils.js",
