--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
     "build": "father-build",
+    "build-lib": "cross-env BUILD_TYPE=lib father-build && cross-env BUILD_TYPE=es father-build",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean --yes",
     "deploy": "npm run docs:build && npm run docs:deploy",
@@ -42,12 +43,15 @@
     "@types/jest": "^27.0.3",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
-    "dumi": "^1.1.0",
     "antd": "4.20.2",
+    "axios": "^0.27.2",
     "babel-plugin-import": "^1.12.2",
-    "lerna": "4.x",
+    "classnames": "^2.3.1",
+    "cross-env": "7.0.2",
+    "dumi": "^1.1.0",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
+    "lerna": "4.x",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
