fix: 添加了卡片布局组件

--- a/packages/bus-components/package.json
+++ b/packages/bus-components/package.json
@@ -29,5 +29,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bici-fed/bici-wui"
-  }
+  },
+  "gitHead": "32710369bb10894c938562a22219238282370467"
 }
