--- a/packages/antx/package.json
+++ b/packages/antx/package.json
@@ -38,5 +38,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182"
-  }
+  },
+  "gitHead": "32710369bb10894c938562a22219238282370467"
 }
