fix: 修改项目架构和打包方式

--- a/packages/antx/package.json
+++ b/packages/antx/package.json
@@ -14,8 +14,10 @@
   "files": [
     "lib",
     "es",
-    "src",
     "dist"
+  ],
+  "sideEffects": [
+    "*.less"
   ],
   "publishConfig": {
     "access": "public"
