--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "dumi dev",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
-    "build": "cross-env BUILD_TYPE=lib father-build && cross-env BUILD_TYPE=es father-build",
+    "build:old": "cross-env BUILD_TYPE=lib father-build && cross-env BUILD_TYPE=es father-build",
+    "build": "npm run version && npm run build-lib && webpack && node ./scripts/gen_less_entry.js",
     "build-lib": "cross-env BUILD_TYPE=lib father-build && cross-env BUILD_TYPE=es father-build",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean --yes",
@@ -18,7 +19,9 @@
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "webpack": "npm run version && webpack",
+    "version": "node ./scripts/gen_version.js"
   },
   "module": "es/index.js",
   "typings": "es/index.d.ts",
@@ -33,6 +36,14 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "resolutions": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "prettier": "2.x",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "typescript": "4.x"
+  },
   "dependencies": {
     "immutability-helper": "^3.1.1",
     "mini-virtual-list": "^0.3.2",
@@ -43,19 +54,29 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
+    "@types/node": "^14.0.26",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
     "antd": "4.20.2",
     "axios": "^0.27.2",
     "babel-plugin-import": "^1.12.2",
+    "babel-loader": "^8.2.2",
+    "style-loader": "^2.0.0",
+    "css-loader": "^5.0.2",
+    "stylelint": "^13.0.0",
     "classnames": "^2.3.1",
     "cross-env": "7.0.2",
+    "mini-css-extract-plugin": "^1.3.8",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "dumi": "^1.1.0",
-    "father-build": "^1.17.2",
+    "father-build": "^1.18.1",
     "gh-pages": "^3.0.0",
     "lerna": "4.x",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.10.0",
     "yorkie": "^2.0.0"
   }
 }
