--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "target": "esnext",
-    "module": "esnext",
     "moduleResolution": "node",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "esModuleInterop": true,
-    "types": ["jest"],
+    "experimentalDecorators": true,
     "strict": true,
-    "skipLibCheck": true,
-    "declaration": true,
+    "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noImplicitAny": true,
+    "declaration": true,
+    "skipLibCheck": true,
     "paths": {
       "@bici-wui/utils": ["./packages/utils/src/index.ts"],
       "@bici-wui/antx": ["./packages/antx/src/index.ts"],
