--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -13,6 +13,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://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@github.com/bici-fed/bici-wui.git"
@@ -28,5 +31,6 @@
     "@bici-wui/antx": "^1.0.7",
     "@bici-wui/bus-components": "^1.0.7",
     "@bici-wui/utils": "^1.0.3"
-  }
+  },
+  "gitHead": "0a3d71d48251f4e5e4d0eb7657e15506f0499fcc"
 }
