--- a/packages/antx/package.json
+++ b/packages/antx/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/runtime": "^7.18.3",
     "@bici-wui/utils": "^1.1.0",
+    "mini-virtual-list": "^0.3.2",
     "lodash": "^4.17.21",
     "masonic": "^3.6.5",
     "react-dnd": "^16.0.1",
